app/sass/top_bar.sass
$dribbble: #ea4c89
$github: #000
$twitter: #1da1f2


.top-bar
  position: fixed
  width: 100vw
  background-color: $header-section-background
  color: $light-text-primary

  // z-index of 1 places the top bar behind the laptop but in front of the slider
  z-index: 1

  list-style: none
  margin: 0
  padding: calc((15px + 1vw) / 2)


  li
    display: inline-block


    &.name
      font-family: 'PierSans', sans-serif
      font-weight: bold
      font-size: calc(15px + 1vw)
      vertical-align: -30%
      text-transform: uppercase

    // Adjust spacing between capital Y and capital L
    span
      letter-spacing: .1em

    &.right
      float: right

    i
      display: inline-block
      padding: 0 .5em

      color: $light-text-primary
      transition: color .2s ease

      &::after
        content: ''
        display: inline-block
        background-color: $white
        // Round
        border-radius: 50%
        width: 45px
        height: 45px
        // Shouldn't take up space
        position: absolute
        // radial growth will animate
        transition: transform .2s ease-out, opacity .2s ease-out
        opacity: 0
        z-index: 1

      // Make sure that the icons appear on top of their backgrounds
      &::before
        position: relative
        z-index: 2

      &:hover
        &::after
          opacity: 1


      // Specific styles for each different logo. Somehow, transforms need to
         be different for each bubble? Confusing.

      &.ion-social-dribbble
        font-size: 30px

        &::after
          transform: translateX(-34.3px) translateY(-1.5px) scale(.01, .01)

        &:hover
          color: $dribbble

          &::after
            transform: translateX(-34.3px) translateY(-1.5px)

      &.ion-social-github
        font-size: 29px

        &::after
          transform: translateX(-35.8px) translateY(-2px) scale(.01, .01)

        &:hover
          color: $github

          &::after
            transform: translateX(-35.8px) translateY(-2px)

      &.ion-social-twitter
        font-size: 25px
        transform: translateY(.07em)

        &::after
          transform: translateX(-34px) translateY(-5px) scale(.01, .01)

        &:hover
          color: $twitter

          &::after
            transform: translateX(-34px) translateY(-5px)

